исправлены фильтры/сортировки в сущностях, добавить свагер докуметанцию на дто и контроллеры, закончить делать статистику (доработка существующего кода)